# TravelPlanningWebpage

./: .env  ORIG_HEAD  README.md  accommodations.html  accommodations.py  activities.py  app.css  app.js  app.py  auth.py  cities.html  cities.py  config  config.py  dashboard.html  data.js  decorators.py  drop_tables.py  extensions.py  flights.html  flights.py  helpers.py  index  index.html  join.html  login.html  package-lock.json  package.json  property-types.html  property_types.py  pyproject.toml  s1-roles.sql  s2-users.sql  s3-user_roles.sql  tables.sql  travel-plans.html  travel_plans.py  users.html  users.py  views.py
